<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Sumatoria" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num1"
            android:textColor="@color/colortextview"
            android:textSize="@dimen/tamanotextview"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tnum1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textColor="@color/colorcuadros"
            android:textSize="@dimen/tamanocuadros" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num2"
            android:textColor="@color/colortextview"
            android:textSize="@dimen/tamanotextview"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tnum2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textColor="@color/colorcuadros"
            android:textSize="@dimen/tamanocuadros" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num3"
            android:textColor="@color/colortextview"
            android:textColorHint="@color/colortextview"
            android:textSize="@dimen/tamanotextview"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tnum3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textColor="@color/colorcuadros"
            android:textSize="@dimen/tamanocuadros" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nresultado"
            android:textColor="@color/colortextview"
            android:textSize="@dimen/tamanotextview"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tsumatoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp" >

        <Button
            android:id="@+id/btnnuevo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/nuevo" />

        <Button
            android:id="@+id/btncalcular2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@drawable/calcular" />

        <Button
            android:id="@+id/btnsalir2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@drawable/salir" />

    </LinearLayout>

</RelativeLayout>